dataHasValue, property chains, cleanup ITs (#52)
* Cleanup ITs in reasoner-elk-snomed

* Fix issue with transitive and reflexive roles

* Add Snomed compare definition

* Add property pattern implication in reasoner-elk-snomed

* Add concrete roles

* Additional concrete roles

* Update ikm-reasoner version